--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,65 +1,51 @@
-<form id="regForm" action="">
+:root{
+  --primary-color: #04AA6D;
+}
 
-<h1>Register:</h1>
+body{
+  margin: 0;
+  font-family: comfortaa;
+ }
 
-<!-- One "tab" for each step in the form: -->
-<div class="tab">Name:
-  <p><input placeholder="First name..." oninput="this.className = ''"></p>
-  <p><input placeholder="Last name..." oninput="this.className = ''"></p>
-</div>
+.navbar {
+  background: #cacaca;
+  padding: 1em;
+  box-shadow: #aaaaaa;
+  display: flex;
+  justify-content: space-between;
+}
 
-<div class="tab">Contact Info:
-  <p><input placeholder="E-mail..." oninput="this.className = ''"></p>
-  <p><input placeholder="Phone..." oninput="this.className = ''"></p>
-</div>
+.container-Nav{
+  margin: 0;
+  padding: 1em;
+}
 
-<div class="tab">Birthday:
-  <p><input placeholder="dd" oninput="this.className = ''"></p>
-  <p><input placeholder="mm" oninput="this.className = ''"></p>
-  <p><input placeholder="yyyy" oninput="this.className = ''"></p>
-</div>
+.logo{
+  text-decoration: none;
+  font-weight: bold;
+  color: black;
+  font-size: 1.4em;
+}
 
-<div class="tab">Login Info:
-  <p><input placeholder="Username..." oninput="this.className = ''"></p>
-  <p><input placeholder="Password..." oninput="this.className = ''"></p>
-</div>
+span{
+  color: var(--primary-color);
+}
 
-<div style="overflow:auto;">
-  <div style="float:right;">
-    <button type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
-    <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
-  </div>
-</div>
-
-<!-- Circles which indicates the steps of the form: -->
-<div style="text-align:center;margin-top:40px;">
-  <span class="step"></span>
-  <span class="step"></span>
-  <span class="step"></span>
-  <span class="step"></span>
-</div>
-
-</form>
-Step 2) Add CSS:
-
-Style the form elements:
-Example
-/* Style the form */
-#regForm {
-  background-color: #ffffff;
-  margin: 100px auto;
-  padding: 40px;
-  width: 70%;
-  min-width: 300px;
+.container {
+  display: flex;
+  margin: 2em;
+  padding: 1em;
+  justify-content: center;
+  width: 100%;
 }
 
 /* Style the input fields */
 input {
-  padding: 10px;
+  padding: 1em;
   width: 100%;
-  font-size: 17px;
-  font-family: Raleway;
-  border: 1px solid #aaaaaa;
+  font-size: bold;
+  font-family: comfortaa;
+  border: 1px solid var(--primary-color);
 }
 
 /* Mark input boxes that gets an error on validation: */
@@ -77,11 +63,22 @@ input.invalid {
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #bbbbbb;
+  background-color: var(--primary-color);
   border: none;
   border-radius: 50%;
   display: inline-block;
   opacity: 0.5;
+}
+
+.next-btn, .previous-btn {
+  background-color: var(--primary-color);
+  text-align: center;
+  margin: 0;
+  padding: 1em;
+  font-family: comfortaa;
+  border-radius: 10px;
+  box-shadow: none;
+  border: none;
 }
 
 /* Mark the active step: */
@@ -91,5 +88,5 @@ input.invalid {
 
 /* Mark the steps that are finished and valid: */
 .step.finish {
-  background-color: #04AA6D;
+  background-color: #434343;
 }
